--- a/data/RegisterPage.css
+++ b/data/RegisterPage.css
@@ -26,11 +26,22 @@ body.b {
     margin-right: auto;
     text-align: left;
 }
-
+.center {
+    text-align: center;
+}
+.reset-margin-bottom {
+    margin-bottom: 0;
+}
 .logo {
-    width: 25%;
-    height: 25%;
-    font-size: 30px;
+    max-width:100%;
+    max-height:100%;
+}
+.login-logo {
+    margin-bottom: 15%;
+}
+.submit-button {
+    width:100%;
+    height:100%;
 }
 .top-buffer { margin-top:20px; }
 .user-photo {
