Create success delivery and ordering prototypes

--- a/data/styles.css
+++ b/data/styles.css
@@ -16,6 +16,10 @@
     background: mediumseagreen;
 }
 
+.min-btn-width {
+    min-width: 165px;
+}
+
 #acceptRegulationBtn {
     top: 520px;
     width: 300px;
