--- a/data/RegisterPage.css
+++ b/data/RegisterPage.css
@@ -26,11 +26,14 @@ body.b {
     margin-right: auto;
     text-align: left;
 }
-.center {
-    text-align: center;
-}
 .reset-margin-bottom {
     margin-bottom: 0;
+}
+.text-long{
+    border: solid;
+    max-height: 100%;
+    height: 25vh;
+    overflow: auto;
 }
 .logo {
     max-width:100%;
@@ -43,7 +46,8 @@ body.b {
     width:100%;
     height:100%;
 }
-.top-buffer { margin-top:20px; }
+.top-buffer-large { margin-top:20px; }
+.top-buffer-medium { margin-top:20px; }
 .user-photo {
 	width: 25%;
     height: 25%;
