--- a/data/RegisterPage.css
+++ b/data/RegisterPage.css
@@ -1,29 +1,3 @@
-/*mobile view container 640x360 resolution*/
-.main-app-view {
-    width: 360px;
-    height: 640px;
-    padding: 30px;
-    box-sizing: border-box;
-    border: 1px solid rgba(121, 121, 121, 1);
-}
-
-body {
-    background-image: none;
-    position: static;
-    left: auto;
-    width: 290px;
-    margin: 0;
-    text-align: left;
-}
-
-body.b {
-    position: relative;
-    left: 0px;
-    width: 360px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-}
 .reset-margin-bottom {
     margin-bottom: 0;
 }
@@ -36,20 +10,30 @@ body.b {
 .logo {
     max-width:100%;
     max-height:100%;
+    text-align: center;
+    display: block;
+    margin: auto;
 }
 .login-logo {
-    margin-bottom: 15%;
+    margin-bottom: 7.5%;
 }
 .submit-button {
-    width:100%;
+    width:50%;
     height:100%;
+    max-width:100%;
+    max-height:100%;
+    text-align: center !important;
+    display: block !important;
+    margin: auto;
 }
 .top-buffer-large { margin-top:20px; }
 .top-buffer-medium { margin-top:20px; }
+.user-photo-row{
+    margin-bottom: 5%;
+}
 .user-photo {
 	width: 25%;
     height: 25%;
-    padding:12.5% 5%;
     font-size: 30px;
 }
 .add-photo-button{
