--- a/data/SenderPage.css
+++ b/data/SenderPage.css
@@ -1,32 +1,3 @@
-/*mobile view container 640x360 resolution*/
-.main-app-view {
-    width: 360px;
-    height: 640px;
-    padding: 30px;
-    box-sizing: border-box;
-    border: 1px solid rgba(121, 121, 121, 1);
-}
-
-body {
-    margin: 0px;
-    background-image: none;
-    position: static;
-    left: auto;
-    width: 290px;
-    margin-left: 0;
-    margin-right: 0;
-    text-align: left;
-}
-
-body.b {
-    position: relative;
-    left: -0px;
-    width: 360px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-}
-
 .search {
     width: 25%;
     height: 25%;
@@ -43,7 +14,15 @@ body.b {
 #boxes {
     text-align: center;
 }
-
-#button {
-    width: 200px;
+.submit-button {
+    width:50%;
+    height:100%;
+    max-width:100%;
+    max-height:100%;
+    text-align: center !important;
+    display: block !important;
+    margin: auto;
+}
+.small-text{
+    font-size: 11px;
 }
