--- a/data/SuccessSending.css
+++ b/data/SuccessSending.css
@@ -1,4 +1,70 @@
-.btn {
-    width: 200px !important;
-    margin-left: -10% !important;
+.reset-margin-bottom {
+    margin-bottom: 0;
+}
+.text-long{
+    border: solid;
+    max-height: 100%;
+    height: 25vh;
+    overflow: auto;
+}
+.logo {
+    max-width:100%;
+    max-height:100%;
+    text-align: center;
+    display: block;
+    margin: auto;
+}
+.login-logo {
+    margin-bottom: 7.5%;
+}
+.submit-button {
+    width:50%;
+    height:100%;
+    max-width:100%;
+    max-height:100%;
+    text-align: center !important;
+    display: block !important;
+    margin: auto;
+}
+.top-buffer-large { margin-top:20px; }
+.top-buffer-medium { margin-top:20px; }
+.user-photo-row{
+    margin-bottom: 5%;
+}
+.user-photo {
+    width: 25%;
+    height: 25%;
+    font-size: 30px;
+}
+.add-photo-button{
+    padding-bottom: 10%;
+}
+input{
+    text-align:center;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.message-container {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.icon-container {
+    height: 20px;
+}
+
+.button-right-position {
+    float: right !important;
+}
+
+.checkbox-left-position {
+    padding-top: 0 !important;
+    margin-bottom: 15px !important;
+    margin-left: 0 !important;
 }
