--- a/data/styles.css
+++ b/data/styles.css
@@ -1,47 +1,50 @@
 .reset-margin-bottom {
     margin-bottom: 0;
 }
-.text-long{
+
+.text-long {
     border: solid;
     max-height: 100%;
     height: 25vh;
     overflow: auto;
 }
+
 .logo {
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
     text-align: center;
     display: block;
     margin: auto;
 }
+
 .login-logo {
     margin-bottom: 7.5%;
 }
 
-.submit-button {
-    width:50%;
-    height:100%;
-    max-width:100%;
-    max-height:100%;
-    text-align: center !important;
-    display: block !important;
-    margin: auto;
+.top-buffer-large {
+    margin-top: 20px;
 }
-.top-buffer-large { margin-top:20px; }
-.top-buffer-medium { margin-top:20px; }
-.user-photo-row{
+
+.top-buffer-medium {
+    margin-top: 20px;
+}
+
+.user-photo-row {
     margin-bottom: 5%;
 }
+
 .user-photo {
-	width: 25%;
+    width: 25%;
     height: 25%;
     font-size: 30px;
 }
-.add-photo-button{
-	padding-bottom: 10%;
+
+.add-photo-button {
+    padding-bottom: 10%;
 }
-input{
-   text-align:center;
+
+input {
+    text-align: center;
 }
 
 .footer {
@@ -74,11 +77,12 @@ input{
     height: 125px;
     text-align: center;
 }
-.submit-button{
-    width:50%;
-    height:100%;
-    max-width:100%;
-    max-height:100%;
+
+.submit-button {
+    width: 50%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     text-align: center !important;
     display: block !important;
     margin: auto;
@@ -110,70 +114,61 @@ input{
 .offset-down {
     margin-bottom: 20px;
 }
+
 /*styles for success sending pages*/
 .reset-margin-bottom {
     margin-bottom: 0;
 }
-.text-long{
+
+.text-long {
     border: solid;
     max-height: 100%;
     height: 25vh;
     overflow: auto;
 }
+
 .logo {
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
     text-align: center;
     display: block;
     margin: auto;
 }
+
 .login-logo {
     margin-bottom: 7.5%;
 }
-.submit-button {
-    width:50%;
-    height:100%;
-    max-width:100%;
-    max-height:100%;
-    text-align: center !important;
-    display: block !important;
-    margin: auto;
+
+.top-buffer-large {
+    margin-top: 20px;
 }
-.top-buffer-large { margin-top:20px; }
-.top-buffer-medium { margin-top:20px; }
-.user-photo-row{
+
+.top-buffer-medium {
+    margin-top: 20px;
+}
+
+.user-photo-row {
     margin-bottom: 5%;
 }
+
 .user-photo {
     width: 25%;
     height: 25%;
     font-size: 30px;
 }
-.add-photo-button{
+
+.add-photo-button {
     padding-bottom: 10%;
 }
-input{
-    text-align:center;
-}
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+input {
+    text-align: center;
 }
 
 .message-container {
-    border: 1px solid black;
+    border: 1px solid lightgrey;
     border-radius: 5px;
     margin: 15px;
-}
-
-.icon-container {
-    height: 20px;
-}
-
-.button-right-position {
-    float: right !important;
 }
 
 .checkbox-left-position {
@@ -182,7 +177,9 @@ input{
     margin-left: 0 !important;
 }
 
-.top-buffer { margin-top:20px; }
+.top-buffer {
+    margin-top: 20px;
+}
 
 .deli {
     width: 25%;
@@ -193,50 +190,53 @@ input{
 #boxes {
     text-align: center;
 }
+
 .submit-button {
-    width:50%;
-    height:100%;
-    max-width:100%;
-    max-height:100%;
+    width: 50%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     text-align: center !important;
     display: block !important;
     margin: auto;
 }
-.small-text{
+
+.small-text {
     font-size: 11px;
 }
 
 /*fullfilment_senderPage.css*/
 
-.center {
-    text-align: center;
-}
 .reset-margin-bottom {
     margin-bottom: 0;
 }
+
 .logo {
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
+
 .login-logo {
     margin-bottom: 15%;
 }
-/*.submit-button {*/
-    /*width:100%;*/
-    /*height:100%;*/
-/*}*/
-.top-buffer { margin-top:20px; }
+
+.top-buffer {
+    margin-top: 20px;
+}
+
 .user-photo {
     width: 25%;
     height: 25%;
-    padding:12.5% 5%;
+    padding: 12.5% 5%;
     font-size: 30px;
 }
-.add-photo-button{
+
+.add-photo-button {
     padding-bottom: 10%;
 }
-input{
-    text-align:center;
+
+input {
+    text-align: center;
 }
 
 .footer {
@@ -253,6 +253,7 @@ input{
     height: 20px;
 
 }
+
 /*Fullfillment of the order BELOW:*/
 /*
 .offeredPrice {
@@ -279,32 +280,41 @@ input{
 .center {
     text-align: center;
 }
+
 .reset-margin-bottom {
     margin-bottom: 0;
 }
+
 .map {
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
+
 .map-map {
     margin-bottom: 15%;
 }
+
 /*.submit-button {*/
-    /*width:100%;*/
-    /*height:100%;*/
+/*width:100%;*/
+/*height:100%;*/
 /*}*/
-.top-buffer { margin-top:20px; }
+.top-buffer {
+    margin-top: 20px;
+}
+
 .user-photo {
     width: 25%;
     height: 25%;
-    padding:12.5% 5%;
+    padding: 12.5% 5%;
     font-size: 30px;
 }
-.add-photo-button{
+
+.add-photo-button {
     padding-bottom: 10%;
 }
-input{
-    text-align:center;
+
+input {
+    text-align: center;
 }
 
 .footer {
@@ -321,25 +331,11 @@ input{
     height: 20px;
 
 }
-/*Fullfillment of the order BELOW:*/
-/*
-.offeredPrice {
-    float: left;
-}
 
-#offeredPrice {
-    width: 40%;
-}
+/*Landing Page*/
 
-.mass {
-    float: right;
+.data-container {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
 }
-
-#mass {
-    width: 40%;
-}
-
-.container2 {
-    display: inline-block;
-}
-*/
