--- a/data/styles.css
+++ b/data/styles.css
@@ -93,7 +93,7 @@ input {
     width: auto;
 }
 
-.white-backgound {
+.white-background {
     background: white !important;
 }
 
@@ -336,6 +336,28 @@ input {
 
 .data-container {
     margin-left: 15px;
-    margin-right: 15px;
+    /*margin-right: 15px;*/
     margin-bottom: 15px;
+}
+
+/*/navbar/*/
+
+.small-image {
+    width: 40px;
+    border-radius: 5px;
+}
+.padding-right {
+    padding-right: 5px;
+}
+
+.padding-left {
+    padding-left: 5px;
+}
+
+.search-bar-height {
+    height: 43px;
+}
+
+.large-icon {
+    font-size: x-large !important;
 }
