--- a/data/styles.css
+++ b/data/styles.css
@@ -335,7 +335,7 @@ input {
 /*Landing Page*/
 
 .data-container {
-    margin-left: 15px;
+    /*margin-left: 15px;*/
     /*margin-right: 15px;*/
     margin-bottom: 15px;
 }
