--- a/data/styles.css
+++ b/data/styles.css
@@ -361,3 +361,13 @@ input {
 .large-icon {
     font-size: x-large !important;
 }
+
+/*history orders details*/
+.order-details-container {
+    display: flex;
+}
+
+.description-container {
+    display: flex;
+    flex-direction: column;
+}
